# depshield

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/actions/depshield/: action.yml
.github/workflows/: ci.yml
depshield/: __init__.py  cli.py
depshield/analyzers/: base.py  dependency_confusion.py  entropy_analyzer.py  eval_detector.py  install_scripts.py  metadata.py  network.py  obfuscation.py  postmessage.py  redos_detector.py  slopsquatting.py  ssrf_detector.py  typosquatting.py  xss_detector.py
depshield/core/: engine.py  models.py  registry.py
depshield/data/: popular_packages.py
depshield/entropy/: __init__.py  charclass.py  compression.py  ngram.py  shannon.py
depshield/output/: json_output.py  sarif.py  terminal.py
poc/: PRIVY-FINDINGS.md  privy-postmessage-poc.html
tests/: conftest.py
tests/fixtures/eval/: indirect_eval.js  safe_eval.js
tests/fixtures/legitimate/: axios.json  chalk.json  commander.json  cors.json  debug.json  dotenv.json  eslint.json  express.json  helmet.json  inquirer.json  jest.json  lodash-es.json  lodash.json  mocha.json  moment.json  node-gyp.json  prettier.json  react-dom.json  react.json  typescript.json  uuid.json  webpack.json  yargs.json
tests/fixtures/malicious/: base64_eval.json  c2_beacon.json  credential_stealer.json  crypto_miner.json  data_exfil.json  env_stealer.json  reverse_shell.json  worm_propagation.json
tests/fixtures/obfuscated/: hex_shellcode.js  multi_layer_base64.js  normal_minified.js  string_array_rotation.js
tests/fixtures/postmessage/: broadcast_no_validation.js  privy_cross_app.js  safe_listener.js  vulnerable_listener.js  wildcard_send.js
tests/fixtures/redos/: dynamic_regex.js  safe_regex.js
tests/test_analyzers/: test_dependency_confusion.py  test_eval_detector.py  test_false_positives.py  test_install_scripts.py  test_metadata.py  test_network.py  test_obfuscation.py  test_postmessage.py  test_redos_detector.py  test_slopsquatting.py  test_ssrf_detector.py  test_typosquatting.py  test_xss_detector.py
tests/test_core/: test_engine.py  test_models.py
tests/test_entropy/: test_charclass.py  test_compression.py  test_ngram.py  test_shannon.py
tests/test_output/: test_sarif.py
(+16 files in other folders)
