[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "depshield"
version = "0.1.0"
description = "Detect npm supply chain attacks: malicious install scripts, typosquatting, obfuscation, dependency confusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "OpenClaw"}]
keywords = ["npm", "security", "supply-chain", "scanner", "typosquatting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
depshield = "depshield.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
