[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "depshield"
version = "0.1.0"
description = "Detect npm supply chain attacks: malicious install scripts, typosquatting, obfuscation, dependency confusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "OpenClaw"}]
keywords = ["npm", "security", "supply-chain", "scanner", "typosquatting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3"]

[project.scripts]
depshield = "depshield.cli:main"

[project.urls]
Homepage = "https://github.com/Gahrcoder/depshield"
Issues = "https://github.com/Gahrcoder/depshield/issues"
Documentation = "https://github.com/Gahrcoder/depshield#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
